--- a/vue3-child-project/package.json
+++ b/vue3-child-project/package.json
@@ -8,6 +8,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/vue-3": "^2.11.5",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
