add tiptap slash command

--- a/vue3-child-project/package.json
+++ b/vue3-child-project/package.json
@@ -8,10 +8,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tiptap/core": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/suggestion": "^2.11.5",
     "@tiptap/vue-3": "^2.11.5",
     "core-js": "^3.8.3",
+    "tippy.js": "^6.3.7",
     "vue": "^3.2.13"
   },
   "devDependencies": {
